@@ -1,7 +1,6 @@
 package main.java.tas.controller;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,6 +18,7 @@ public class EnemiesLogicImpl implements EnemiesLogic {
 	private int actualWave;
 	private final EnemyFactory waveFactory;
 	private List<Enemy> enemyToBeSpawned = new ArrayList<Enemy>();
+	private int points;
 
 	/**
 	 * Constructor that creates the logic of the enemy waves.
@@ -29,11 +29,11 @@ public class EnemiesLogicImpl implements EnemiesLogic {
 	public EnemiesLogicImpl(final List<Position> nodesPosition) {
 		this.waveFactory = new EnemyFactoryImpl(nodesPosition);
 		this.actualWave = 0;
+		this.points = 0;
 	}
 
 	/** {@inheritDoc} */
 
-	// TODO: return optional
 	@Override
 	public Optional<Enemy> spawnEnemy() {
 		if (this.enemyToBeSpawned.isEmpty()) {
@@ -41,7 +41,8 @@ public class EnemiesLogicImpl implements EnemiesLogic {
 		}
 
 		Enemy enemy = this.enemyToBeSpawned.remove(0);
-		this.aliveEnemiesList.add(enemy);
+		
+		this.aliveEnemiesList.add(enemy);			
 
 		return Optional.of(enemy);
 	}
@@ -52,7 +53,15 @@ public class EnemiesLogicImpl implements EnemiesLogic {
 		if (!this.aliveEnemiesList.contains(enemy)) {
 			throw new NoSuchFieldException("This enemy is not alive");
 		}
+		
 		this.aliveEnemiesList.remove(enemy);
+		this.points++;
+	}
+	
+	/** {@inheritDoc} */
+	@Override
+	public int getPoints() {
+		return this.points;
 	}
 
 	/** {@inheritDoc} */
@@ -77,7 +86,7 @@ public class EnemiesLogicImpl implements EnemiesLogic {
 	/** {@inheritDoc} */
 	@Override
 	public List<Enemy> getEnemies() {
-		return Collections.unmodifiableList(this.aliveEnemiesList);
+		return List.copyOf(this.aliveEnemiesList);
 	}
 
 	/** {@inheritDoc} */
